# OutboundOS

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  otel-collector-config.yaml  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/agents/: __init__.py  icp_agent.py  llm_outputs.py  messaging_agent.py  pain_point_agent.py  persona_agent.py  prompts.py  registry.py  research_agent.py  reviewer_agent.py  runtime.py
app/api/: dependencies.py  health.py  ops.py  router.py
app/dataset/: __init__.py  build_outboundbench.py  enrichers.py  exporters.py  finalize_human_ground_truth.py  prompts.py  revalidate_outboundbench.py  schemas.py  seed_companies.csv  validators.py
app/db/: session.py
app/evaluation/: __init__.py  benchmark.py  charts.py  dataset.py  dataset_quality_report.py  metrics.py  models.py  outboundbench_loader.py  publish_benchmark.py  run.py  runner.py  semantic.py  storage.py
app/graph/: __init__.py  builder.py  state.py
app/models/: __init__.py  system.py
app/schemas/: __init__.py  company_summary.py  icp_score.py  messaging.py  pain_points.py  persona.py  reviewer.py  seller_profile.py
app/services/: cache.py  jobs.py  observability.py  (+1 more)
config/: seller_profile.json
dashboard/: package-lock.json  package.json  tailwind.config.js
data/: benchmark_results.json  outboundbench_companies.csv  outboundbench_companies.jsonl  outboundbench_review_queue.csv
docs/: BENCHMARK.md  PROJECT_WRITEUP.md
tests/: test_health.py
(+59 files in other folders)
